Issue #12029 - Fix site title in head title tag (#12560)

--- a/config/sync/metatag.metatag_defaults.global.yml
+++ b/config/sync/metatag.metatag_defaults.global.yml
@@ -7,7 +7,7 @@ _core:
 id: global
 label: Global
 tags:
-  title: '[current-page:title] | [site:name]'
+  title: '[current-page:title] | [os_metatag:site_title]'
   canonical_url: '[current-page:url]'
   description: '[os_metatag:meta_description]'
   shortcut_icon: '[vsite:site_favicon]'
