--- a/config/sync/core.entity_form_display.block_content.dataverse_search_box.default.yml
+++ b/config/sync/core.entity_form_display.block_content.dataverse_search_box.default.yml
@@ -4,12 +4,13 @@ status: true
 dependencies:
   config:
     - block_content.type.dataverse_search_box
-    - field.field.block_content.dataverse_search_box.body
+    - field.field.block_content.dataverse_search_box.field_dataverse_identifier
+    - field.field.block_content.dataverse_search_box.field_search_placeholder_text
+    - field.field.block_content.dataverse_search_box.field_widget_title
   module:
     - content_moderation
     - field_layout
     - layout_discovery
-    - text
 third_party_settings:
   field_layout:
     id: layout_onecol
@@ -19,18 +20,33 @@ targetEntityType: block_content
 bundle: dataverse_search_box
 mode: default
 content:
-  body:
-    type: text_textarea_with_summary
-    weight: 101
+  field_dataverse_identifier:
+    weight: 2
     settings:
-      rows: 9
-      summary_rows: 3
+      size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_search_placeholder_text:
+    weight: 3
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_widget_title:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
     region: content
   info:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -38,14 +54,14 @@ content:
     third_party_settings: {  }
   langcode:
     type: language_select
-    weight: 2
+    weight: 4
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 5
     settings: {  }
     region: content
     third_party_settings: {  }
