#12331 follow me widget (#12568)
* Issue #12331 - Added custom block type for follow me widget.

* Issue #12331 - Added js for follow me widget.

* Issue #12331 - Added code for follow me widget

* Issue #12331 - Added code and js.

* Issue #12331 - added rrssb-plus

* Issue #12331 - added code and config files for follow me widget.

* Issue #12331 - resolved conflict

* Issue #12331 - added config files and module

* Issue #12331 - Added follow me widget

* Issue #12331 - Done some changes.

* Issue #12331 - Re-order form fields.

* Issue #12331 - Fixed draggable issue.

* Issue #12331 - code added for follow me block

* Issue #12331 - changed file name

* Issue #12331 - Done PR review changes

* Issue #12331 - Added Rss Feed page url.

* Issue #12331 - Fixed PR failed config

* Issue #12331 - Fixed PR review changes.

* Issue #12331 -  Fixed PR review changes and library loading issue.

* Issue #12331 - Done PR review changes.

* Issue #12331 - Done PR review changes.

* Issue #12331 - Fixed PR review changes and added test

* Issue #12331 - Fixed PR review changes.

* Issue #12331 - Fixed PR review changes.

* Issue #12331 - Fixed PR review changes.

* Issue #12331 - Fixed config for PR review changes.

* Issue #12331 - fixed pr review points

* Issue #12331 -

* Issue #12331 - Modified tests for RssFeedBlock.

--- a/config/sync/field.storage.paragraph.field_weight.yml
+++ b/config/sync/field.storage.paragraph.field_weight.yml
@@ -1,19 +1,19 @@
-uuid: ecbeb6a3-0d13-4b18-82d7-d4d5e7b6fc1e
+uuid: 6b85fde7-0fc7-4380-8c2e-c18c8a2ff31f
 langcode: en
 status: true
 dependencies:
   module:
-    - media
     - paragraphs
-id: paragraph.field_media
-field_name: field_media
+id: paragraph.field_weight
+field_name: field_weight
 entity_type: paragraph
-type: entity_reference
+type: integer
 settings:
-  target_type: media
+  unsigned: false
+  size: normal
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
