--- a/composer.json
+++ b/composer.json
@@ -236,6 +236,7 @@
         "npm-asset/slick-carousel": "^1.8",
         "oomphinc/composer-installers-extender": "^1.1",
         "php-ds/php-ds": "^1.2",
+        "rrssb/rrssb-plus": "^0.5.0",
         "swordapp/swordappv2-php-library": "master",
         "twbs/bootstrap-sass": "^3.3.7",
         "twig/extensions": "^1.5",
@@ -350,7 +351,7 @@
                 "'view_path' is set to /views/ajax after second ajax request": "https://www.drupal.org/files/issues/2018-03-14/drupal-views_path_ajax-2866386-10.patch",
                 "Image styles fails with absolute path": "https://www.drupal.org/files/issues/image_styles-2754273-7.patch",
                 "Allow Redirectresponse to override ?destination": "https://www.drupal.org/files/issues/2950883-2.patch",
-                "User context missing when using toUrl in some circumstances": "https://www.drupal.org/files/issues/2019-05-22/3056234-test-fix-4.patch",	
+                "User context missing when using toUrl in some circumstances": "https://www.drupal.org/files/issues/2019-05-22/3056234-test-fix-4.patch",
                 "null route object in big_pipe requests after 8.7.8 upgrade": "https://www.drupal.org/files/issues/2019-10-24/3089913-2.patch"
             },
             "drupal/group_purl": {
