--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -35,6 +35,17 @@ accordionWidget:
 randomWidget:
   js:
     js/os_widgets.random.js: {}
+followMeWidget:
+  css:
+    base:
+      /libraries/rrssb-plus/css/rrssb.css: {}
+      /libraries/rrssb-plus/css/rrssb.buttons.css: {}
+      css/os_widgets.followme.css: {}
+  js:
+    js/os_widgets.follow_me.js: {}
+  dependencies:
+    - core/drupal
+    - core/drupal.tabledrag
 mailchimpWidget:
   css:
     component:
