--- a/config/sync/core.entity_view_display.block_content.list_of_posts.default.yml
+++ b/config/sync/core.entity_view_display.block_content.list_of_posts.default.yml
@@ -9,17 +9,14 @@ dependencies:
     - field.field.block_content.list_of_posts.field_display_style
     - field.field.block_content.list_of_posts.field_filter_by_vocabulary
     - field.field.block_content.list_of_posts.field_number_of_items_to_display
+    - field.field.block_content.list_of_posts.field_publication_types
     - field.field.block_content.list_of_posts.field_show_more_link
     - field.field.block_content.list_of_posts.field_show_pager
     - field.field.block_content.list_of_posts.field_sorted_by
     - field.field.block_content.list_of_posts.field_url_for_the_more_link
     - field.field.block_content.list_of_posts.field_widget_title
   module:
-    - layout_builder
     - link
-third_party_settings:
-  layout_builder:
-    sections: {  }
 id: block_content.list_of_posts.default
 targetEntityType: block_content
 bundle: list_of_posts
@@ -51,6 +48,7 @@ hidden:
   field_display_style: true
   field_filter_by_vocabulary: true
   field_number_of_items_to_display: true
+  field_publication_types: true
   field_show_more_link: true
   field_show_pager: true
   field_sorted_by: true
