--- a/config/sync/field.storage.block_content.field_content_type.yml
+++ b/config/sync/field.storage.block_content.field_content_type.yml
@@ -42,7 +42,7 @@ settings:
       value: presentation
       label: Presentation
     -
-      value: reference
+      value: publication
       label: Publication
     -
       value: software_project
