--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ env:
     - JOB="job:run-functional-tests os,vsite"
     - JOB="job:run-functional-javascript-tests classes,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect,os-theme-preview"
     - JOB="job:run-functional-javascript-tests events,os,vsite"
+    - JOB="job:run-functional-javascript-tests redirect-settings"
 #    - JOB=job:run-behat-tests
 
 before_install:
