--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,8 @@ env:
     - JOB="job:run-kernel-tests other,cp-menu,wysiwyg"
     - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter"
     - JOB="job:run-functional-tests os,vsite"
-    - JOB="job:run-functional-javascript-tests classes,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect,os-theme-preview"
-    - JOB="job:run-functional-javascript-tests events,os,vsite"
-    - JOB="job:run-functional-javascript-tests redirect-settings"
+    - JOB="job:run-functional-javascript-tests classes,pages,publications,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect,os-theme-preview"
+    - JOB="job:run-functional-javascript-tests events,os,vsite,widgets"
 #    - JOB=job:run-behat-tests
 
 before_install:
