Issue #12123 - Refactor slick setPosition into init event combine with breakpoints

--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -52,6 +52,6 @@ mailchimpWidget:
       css/mailchimp.form.css: {}
 slideshowWidget:
   js:
-    js/os_widgets.slideshow.js: {}
+    js/os_widgets.slideshow.js: { weight: -1 }
   dependencies:
     - slick/slick.load
