--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -4,6 +4,9 @@ addthis:
 rss_feed_copy:
   js:
     js/os_widgets_rss_feed_copy.js: { }
+dataverse_search_box:
+  js:
+    js/os_widgets_dataverse_search_box.js: { }
 layout:
   css:
     component:
