--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -6,7 +6,10 @@ rss_feed_copy:
     js/os_widgets_rss_feed_copy.js: { }
 dataverse_search_box:
   js:
-    js/os_widgets_dataverse_search_box.js: { }
+    js/os_widgets_dataverse_search_box.js: {preprocess: false}
+  dependencies:
+    - core/jquery
+    - core/drupalSettings
 layout:
   css:
     component:
