Issue #12336 - made ui fixes

--- a/profile/modules/apps/os_widgets/os_widgets.libraries.yml
+++ b/profile/modules/apps/os_widgets/os_widgets.libraries.yml
@@ -58,3 +58,7 @@ slideshowWidget:
 widgetForm:
   js:
     js/os_widgets_form.js: {}
+lopwidgetForm:
+  css:
+    component:
+      css/os_widgets.lop.css: {}
