--- a/config/sync/core.entity_form_display.block_content.list_of_posts.default.yml
+++ b/config/sync/core.entity_form_display.block_content.list_of_posts.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.block_content.list_of_posts.field_filter_by_vocabulary
     - field.field.block_content.list_of_posts.field_number_of_items_to_display
     - field.field.block_content.list_of_posts.field_publication_types
+    - field.field.block_content.list_of_posts.field_show
     - field.field.block_content.list_of_posts.field_show_more_link
     - field.field.block_content.list_of_posts.field_show_pager
     - field.field.block_content.list_of_posts.field_sorted_by
@@ -58,6 +59,12 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_buttons
+    region: content
+  field_show:
+    weight: 27
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   field_show_more_link:
     weight: 6
