--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ env:
     - JOB="job:run-kernel-tests os"
     - JOB="job:run-kernel-tests cp"
     - JOB="job:run-kernel-tests other,cp-menu,wysiwyg"
-    - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter"
+    - JOB="job:run-functional-tests classes,events,pages,cp,media-browser,os-theme-preview,breadcrumbs,analytics,cp-menu,publications,cp-appearance,redirect,twitter,vsite_favicon"
     - JOB="job:run-functional-tests os,vsite"
     - JOB="job:run-functional-javascript-tests classes,pages,publications,widgets,cp-appearance,cp-menu,profiles,cp,mailchimp,metatag,redirect,os-theme-preview"
     - JOB="job:run-functional-javascript-tests events,os,vsite"
