Issue #12451 - Fixes minor code review change requests

--- a/config/sync/block_content.type.dataverse_search_box.yml
+++ b/config/sync/block_content.type.dataverse_search_box.yml
@@ -5,4 +5,4 @@ dependencies: {  }
 id: dataverse_search_box
 label: 'Dataverse Search Box'
 revision: 1
-description: "TODO description for dataverse search box widget\t\r\n"
+description: "This widget places a Dataverse Search From on the page, in which a user can enter a search query and be taken to a Dataverse search page in a new tab. \t\r\n"
